# monad-bayes

./: .gitignore  LICENSE.md  README.md  idris-monad-bayes.ipkg  libm.c  monad-bayes.ipkg  my_gsl_lib.c
Control/Monad/Bayes/: Free.idr  Interface.idr  Population.idr  PopulationVect.idr  Sampler.idr  SamplerGSL.idr  SamplerIo.idr  Seq.idr  Sequential.idr  Traced.idr  Weighted.idr
Control/Monad/Bayes/Examples/: LinRegr.idr
Control/Monad/Bayes/Inference/: PMMH.idr  RMSMC.idr  SMC.idr  SMC2.idr
Control/Monad/Bayes/Traced/: Basic.idr  Common.idr  Dynamic.idr  Static.idr
benchmarks/haskell/: BenchmarkTests.hs  Benchmarks.hs  HMM.hs  LDA.hs  LinRegr.hs  Main.hs  Topic.hs  benchmark.cabal  cabal.project
benchmarks/idris2/: Benchmarks.idr  HMM.idr  LinRegr.idr  Main.idr  Topic.idr  benchmarks.ipkg
examples/: plot_benchmarks.py
examples/haskell/: Benchmark.hs  HMM.hs  benchmarks.csv  cabal.project  examples.cabal
examples/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/haskell/dist-newstyle/packagedb/ghc-9.0.1/: examples-0.1.0.0-inplace-benchmark.conf  package.cache
examples/haskell/dist-newstyle/src/: monad-bay_-9ac5339911fc4582.cache
examples/idris2/: Benchmark.idr  HMM.idr  LinRegr.idr  Topic.idr  benchmark_params.txt  benchmarks.csv  examples.ipkg
