cabal-version:      3.6
name:               examples
version:            0.1.0.0

library benchmark
    exposed-modules:  Benchmark
    other-modules:    LinRegr
                    , HMM
                    , Topic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base >= 4.11 && < 4.17,
                        split >= 0.2.2 && < 0.2.4,
                        criterion                     >= 1.5.13 && < 1.6,
                        deepseq                       >= 1.4.4 && < 1.5,
                        vector                        >= 0.12.3 && < 0.13,
                        statistics                    >= 0.15.2 && < 0.16,
                        log-domain                    >= 0.13.2 && < 0.14,
                        monad-bayes
    hs-source-dirs:   ./
    default-language: Haskell2010
